service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypywebapp-service
spec:
  type: NodePort
  selector:
    app: mywebsite
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
